Implement group chatting functionality.